--- a/src/app/dashboard/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard/dashboard.component.html
@@ -4,8 +4,9 @@
   </h1>
 </mat-toolbar>
 <div>
-  <div style="margin:10px;">
-    <app-dashboard-chain-status></app-dashboard-chain-status>
+  <div fxLayout="column" fxLayout.gt-sm="row" fxLayoutGap="10px" style="margin:10px;">
+    <app-dashboard-chain-status fxFlex.gt-sm="50%"></app-dashboard-chain-status>
+    <app-dashboard-price fxFlex.gt-sm="50%" [price]="eosQuote$ | async"></app-dashboard-price>
   </div>
   <div style="margin:10px;">
     <app-dashboard-blocks></app-dashboard-blocks>
