--- a/src/app/dashboard/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard/dashboard.component.html
@@ -4,6 +4,9 @@
   </h1>
 </mat-toolbar>
 <div>
+    <a target="_blank" href="https://app.nebulaprotocol.com/"><img src="/assets/nebula.jpg" style="width: 100%;"/></a>
+</div>
+<div>
   <div fxLayout="column" fxLayout.gt-sm="row" fxLayoutGap="10px" style="margin:10px;">
     <app-dashboard-chain-status fxFlex.gt-sm="50%"></app-dashboard-chain-status>
     <app-dashboard-price fxFlex.gt-sm="50%" [price]="eosQuote$ | async"></app-dashboard-price>
