--- a/src/app/dashboard/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
     {{ 'Dashboard' | translate }}
   </h1>
 </mat-toolbar>
-<div>
+<div *ngIf="showAds">
     <a target="_blank" href="https://app.nebulaprotocol.com/"><img src="/assets/nebula.jpg" style="width: 100%;"/></a>
 </div>
 <div>
