--- a/src/app/dashboard/dashboard/price/price.component.html
+++ b/src/app/dashboard/dashboard/price/price.component.html
@@ -43,11 +43,11 @@
         </ng-container>
         <tr>
           <td>Circulating Supply</td>
-          <td>{{price.circulating_supply | number}} EOS</td>
+          <td>{{price.circulating_supply | number}} {{token}}</td>
         </tr>
         <tr>
           <td>Total Supply</td>
-          <td>{{price.total_supply | number}} EOS</td>
+          <td>{{price.total_supply | number}} {{token}}</td>
         </tr>
       </table>
     </div>
