Style navbar to Liberland colors

--- a/src/app/shared/masterpage/header/header.component.scss
+++ b/src/app/shared/masterpage/header/header.component.scss
@@ -22,6 +22,9 @@ header {
       margin-right: 5px;
       vertical-align: middle;
     }
+    span {
+      color: azure;
+    }
   }
   .search-collapsed {
     width: auto;
