Change color variables to Liberland colors

--- a/src/themes.scss
+++ b/src/themes.scss
@@ -11,10 +11,10 @@ $mat-eosio: (
     700 : #353143,
     800 : #2d293a,
     900 : #1f1b29,
-    A100 : #9470ff,
-    A200 : #6e3dff,
-    A400 : #470aff,
-    A700 : #3c00f0,
+    A100 : #1577C6,
+    A200 : #31A4FF,
+    A400 : #198AE6,
+    A700 : #1C99FF,
     contrast: (
         50 : #000000,
         100 : #000000,
