--- a/src/app/shared/masterpage/sidenav/sidenav.component.scss
+++ b/src/app/shared/masterpage/sidenav/sidenav.component.scss
@@ -1,3 +1,8 @@
+.mat-list-item {
+    color: white;
+}
+
 .mat-list-item.active {
-    background-color: #f5f5f5;
+    background-color: none;
+    color: #efc718;
 }
