--- a/src/themes.scss
+++ b/src/themes.scss
@@ -1,52 +1,17 @@
 @import '~@angular/material/theming';
-
-$mat-eosio: (
-    50 : #e9e8ea,
-    100 : #c7c5cc,
-    200 : #a29faa,
-    300 : #7c7987,
-    400 : #605c6e,
-    500 : #443f54,
-    600 : #3e394d,
-    700 : #353143,
-    800 : #2d293a,
-    900 : #1f1b29,
-    A100 : #1577C6,
-    A200 : #31A4FF,
-    A400 : #198AE6,
-    A700 : #1C99FF,
-    contrast: (
-        50 : #000000,
-        100 : #000000,
-        200 : #000000,
-        300 : #ffffff,
-        400 : #ffffff,
-        500 : #ffffff,
-        600 : #ffffff,
-        700 : #ffffff,
-        800 : #ffffff,
-        900 : #ffffff,
-        A100 : #000000,
-        A200 : #ffffff,
-        A400 : #ffffff,
-        A700 : #ffffff,
-    )
-);
-
+$mat-eosio: ( 50: #e9e8ea, 100: #c7c5cc, 200: #a29faa, 300: #7c7987, 400: #605c6e, 500: #164051, 600: #3e394d, 700: #353143, 800: #2d293a, 900: #164051, A100: #1577C6, A200: #31A4FF, A400: #198AE6, A700: #1C99FF, contrast: ( 50: #000000, 100: #000000, 200: #000000, 300: #ffffff, 400: #ffffff, 500: #ffffff, 600: #ffffff, 700: #ffffff, 800: #ffffff, 900: #ffffff, A100: #000000, A200: #ffffff, A400: #ffffff, A700: #ffffff, ));
 @include mat-core();
-
 $app-light-primary: mat-palette($mat-eosio);
 $app-light-accent: mat-palette($mat-eosio, A200, A100, A400);
 $app-light-warn: mat-palette($mat-red);
 $app-light-theme: mat-light-theme($app-light-primary, $app-light-accent, $app-light-warn);
 @include angular-material-theme($app-light-theme);
-
 $app-dark-primary: mat-palette($mat-eosio);
 $app-dark-accent: mat-palette($mat-eosio, A200, A100, A400);
 $app-dark-warn: mat-palette($mat-red);
 $app-dark-theme: mat-dark-theme($app-dark-primary, $app-dark-accent, $app-dark-warn);
 .dark-theme {
-  @include angular-material-theme($app-dark-theme);
+    @include angular-material-theme($app-dark-theme);
 }
 
 html,
@@ -64,4 +29,9 @@ a {
 p {
     margin: 0;
     padding: 0;
+}
+
+.mat-card,
+.table-wrapper {
+    border-top: 2px solid #efc718;
 }
