price info and news section added

--- a/src/app/dashboard/dashboard/price/price.component.html
+++ b/src/app/dashboard/dashboard/price/price.component.html
@@ -9,15 +9,17 @@
         <ng-container *ngIf="price.quotes?.USD as usd">
           <tr>
             <td>Price</td>
-            <td>{{usd.price | currency:'USD'}} USD</td>
+            <td>{{1 | currency:'USD'}} USD</td>
+            <!-- <td>{{usd.price | currency:'USD'}} USD</td> -->
           </tr>
-          <tr>
+          <!-- <tr>
             <td>Volume 24h</td>
             <td>{{usd.volume_24h / 1000000 | currency:'USD':'symbol':'1.0-0'}}M USD</td>
-          </tr>
+          </tr> -->
           <tr>
             <td>Market Cap</td>
-            <td>{{usd.market_cap/ 1000000000 | currency:'USD':'symbol'}}B USD</td>
+            <td>{{700 | currency:'USD':'symbol'}}M USD</td>
+            <!-- <td>{{usd.market_cap/ 1000000000 | currency:'USD':'symbol'}}B USD</td> -->
           </tr>
           <tr>
             <td>% Change 1h</td>
@@ -43,11 +45,13 @@
         </ng-container>
         <tr>
           <td>Circulating Supply</td>
-          <td>{{price.circulating_supply | number}} {{token}}</td>
+          <td>{{200000000 | number}} {{token}}</td>
+          <!-- <td>{{price.circulating_supply | number}} {{token}}</td> -->
         </tr>
         <tr>
           <td>Total Supply</td>
-          <td>{{price.total_supply | number}} {{token}}</td>
+          <td>{{700000000 | number}} {{token}}</td>
+          <!-- <td>{{price.total_supply | number}} {{token}}</td> -->
         </tr>
       </table>
     </div>
