link and styling

--- a/src/app/news/news.component.scss
+++ b/src/app/news/news.component.scss
@@ -5,3 +5,19 @@
 .mat-card-content {
     margin-bottom: 0px;
 }
+
+button {
+    color: #2a566f;
+}
+
+button:hover {
+    background-color: #efc718;
+} 
+
+a {
+    text-decoration: none;
+}
+
+.example-card {
+    border-top: 3px solid #efc718;
+}
