--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -15,7 +15,9 @@
         </p>    
       </mat-card-content>
       <mat-card-actions>
-        <button mat-button>Full Story</button>
+        <a href={{article.url}}>
+          <button mat-button>Full Story</button>
+        </a>
       </mat-card-actions>
     </mat-card>
   </mat-grid-tile>
