table sizing fix

--- a/src/app/proposals/proposals.component.html
+++ b/src/app/proposals/proposals.component.html
@@ -3,7 +3,8 @@
       {{ 'Proposals' | translate }}
     </h1>
 </mat-toolbar>
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+<div>
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
     <!--- Note that these columns can be defined in any order.
           The actual rendered columns are set as a property on the row definition" -->
@@ -40,5 +41,6 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
+</div>
   
   
