--- a/src/app/proposals/proposals.component.scss
+++ b/src/app/proposals/proposals.component.scss
@@ -1,23 +1,3 @@
-.example-card {
+div {
     margin: 15px;
-}
-
-.mat-card-content {
-    margin-bottom: 0px;
-}
-
-button {
-    color: #2a566f;
-}
-
-button:hover {
-    background-color: #efc718;
-} 
-
-a {
-    text-decoration: none;
-}
-
-.example-card {
-    border-top: 3px solid #efc718;
 }
