Change h2 styling to uppercase

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,6 +9,11 @@ pre {
     overflow: auto;
 }
 
+h3 {
+    text-transform: uppercase;
+    color: #164051;
+}
+
 table {
     width: 100%;
     border-collapse: collapse;
