--- a/src/app/proposals/proposals.component.scss
+++ b/src/app/proposals/proposals.component.scss
@@ -5,3 +5,17 @@ div {
 .mat-elevation-z8 {
     border-top: 3px solid  #efc718;
 }
+
+#add-icon {
+    border-radius: 50%;
+    border: 1px solid black;
+    margin: 0 10px;
+}
+
+#progressbar {
+    width: 180px;
+}
+
+#vote {
+    text-align: center;
+}
